# InventorySlot.gd
# èƒŒåŒ…æ ¼å­ - é¡¯ç¤ºå–®å¼µå¡ç‰‡
extends PanelContainer

# ==================== ä¿¡è™Ÿ ====================
signal slot_clicked(card_id: String, slot_position: Vector2)  # âœ… å¢åŠ ä½ç½®åƒæ•¸
signal slot_right_clicked(card_id: String, slot_position: Vector2)  # å³éµé»æ“Šä¿¡è™Ÿ

# ==================== å¼•ç”¨ ====================
@onready var card_sprite = $MarginContainer/VBoxContainer/CardTextureContainer/CardSprite
@onready var card_texture = $MarginContainer/VBoxContainer/CardTextureContainer/CardTexture
@onready var level_label = $MarginContainer/VBoxContainer/CardTextureContainer/LevelLabel
@onready var exp_bar = $MarginContainer/VBoxContainer/ExpBar

# åŸºç¤ä¿¡æ¯ï¼ˆé€šéå‡½æ•¸ç²å–ï¼Œæ”¯æŒå¤šè·¯å¾‘å›é€€ï¼‰
var name_label: Label = null
var race_label: Label = null
var element_label: Label = null

# ä¸»å‹•æŠ€èƒ½ç›¸é—œï¼ˆå¯é¸ç¯€é»ï¼‰
var active_skill_separator: PanelContainer = null
var active_skill_name: Label = null
var active_skill_cd: Label = null
var active_skill_desc: Label = null

# éšŠé•·æŠ€èƒ½ç›¸é—œï¼ˆå¯é¸ç¯€é»ï¼‰
var leader_skill_separator: PanelContainer = null
var leader_skill_name: Label = null
var leader_skill_desc: Label = null

# ==================== è³‡æ–™ ====================
var instance_id: String = ""  # âœ… å¡ç‰‡å¯¦ä¾‹IDï¼ˆå”¯ä¸€ï¼‰
var card_id: String = ""  # å¡ç‰‡æ¨¡æ¿IDï¼ˆç”¨æ–¼é¡¯ç¤ºæ•¸æ“šï¼‰
var is_empty: bool = true
var is_overflow_slot: bool = false  # âœ… æ˜¯å¦æ˜¯è¶…å‡ºä¸Šé™çš„è‡¨æ™‚æ ¼å­
var is_selected_for_deletion: bool = false  # âœ… æ˜¯å¦è¢«é¸ä¸­å¾…åˆªé™¤
var active_tween: Tween = null  # ç•¶å‰é‹è¡Œçš„å‹•ç•« Tween
var ELEMENT_NAMES = {
	Constants.Element.METAL: "é‡‘",
	Constants.Element.WOOD: "æœ¨",
	Constants.Element.WATER: "æ°´",
	Constants.Element.FIRE: "ç«",
	Constants.Element.EARTH: "åœŸ",
	Constants.Element.HEART: "å¿ƒ"
}
var ELEMENT_COLORS = {
	Constants.Element.METAL: Color("FFD700"), # é‡‘è‰²
	Constants.Element.WOOD: Color("33CC33"),   # ç¶ è‰²
	Constants.Element.WATER: Color("3388FF"),  # è—è‰²
	Constants.Element.FIRE: Color("FF3333"),   # ç´…è‰²
	Constants.Element.EARTH: Color("CC9933"),  # åœŸé»ƒè‰²
	Constants.Element.HEART: Color("FF66CC")   # äº®ç²‰ç´…
}
var RACE_NAMES = {
	Constants.CardRace.HUMAN: "äººé¡",
	Constants.CardRace.ELF: "ç²¾éˆ",
	Constants.CardRace.DWARF: "çŸ®äºº",
	Constants.CardRace.ORC: "ç¸äºº",
	Constants.CardRace.DEMON: "æƒ¡é­”",
	Constants.CardRace.UNDEAD: "ä¸æ­»",
	Constants.CardRace.DRAGON: "é¾æ—",
	Constants.CardRace.ELEMENTAL: "å…ƒç´ "
}
# ==================== åˆå§‹åŒ– ====================

func _ready():
	# åˆå§‹åŒ–ç¯€é»å¼•ç”¨ï¼ˆæ”¯æŒå¤šè·¯å¾‘å›é€€ï¼‰
	_init_node_references()

	# è¨­å®šåˆå§‹å¤–è§€
	if is_empty:
		show_empty()

func _exit_tree():
	"""ç¯€é»é›¢é–‹å ´æ™¯æ¨¹æ™‚æ¸…ç† Tween"""
	if active_tween and active_tween.is_valid():
		active_tween.kill()
		active_tween = null

func _init_node_references():
	"""åˆå§‹åŒ–ç¯€é»å¼•ç”¨ï¼Œæ”¯æŒèˆŠç‰ˆå’Œæ–°ç‰ˆå¸ƒå±€"""
	# name_label - å˜—è©¦æ–°ç‰ˆè·¯å¾‘ï¼Œå¤±æ•—å‰‡å˜—è©¦èˆŠç‰ˆè·¯å¾‘
	name_label = get_node_or_null("MarginContainer/VBoxContainer/TopInfo/NameLabel")
	if not name_label:
		name_label = get_node_or_null("MarginContainer/VBoxContainer/NameLabel")

	# element_label - å˜—è©¦æ–°ç‰ˆè·¯å¾‘ï¼Œå¤±æ•—å‰‡å˜—è©¦èˆŠç‰ˆè·¯å¾‘
	element_label = get_node_or_null("MarginContainer/VBoxContainer/TopInfo/ElementLabel")
	if not element_label:
		element_label = get_node_or_null("MarginContainer/VBoxContainer/ElementLabel")

	# race_label - åƒ…æ–°ç‰ˆå¸ƒå±€æœ‰æ­¤ç¯€é»
	race_label = get_node_or_null("MarginContainer/VBoxContainer/TopInfo/RaceLabel")

	# ä¸»å‹•æŠ€èƒ½ç›¸é—œç¯€é»
	active_skill_separator = get_node_or_null("MarginContainer/VBoxContainer/ActiveSkillSeparator")
	active_skill_name = get_node_or_null("MarginContainer/VBoxContainer/ActiveSkillSeparator/ActiveSkillName")
	active_skill_cd = get_node_or_null("MarginContainer/VBoxContainer/ActiveSkillSeparator/ActiveSkillCD")
	active_skill_desc = get_node_or_null("MarginContainer/VBoxContainer/ActiveSkillDesc")

	# éšŠé•·æŠ€èƒ½ç›¸é—œç¯€é»
	leader_skill_separator = get_node_or_null("MarginContainer/VBoxContainer/LeaderSkillSeparator")
	leader_skill_name = get_node_or_null("MarginContainer/VBoxContainer/LeaderSkillSeparator/LeaderSkillName")
	leader_skill_desc = get_node_or_null("MarginContainer/VBoxContainer/LeaderSkillDesc")

func setup(p_instance_id: String):
	"""è¨­å®šå¡ç‰‡è³‡æ–™ï¼ˆæ¥æ”¶ instance_idï¼‰"""
	instance_id = p_instance_id
	is_empty = false

	# âœ… é€šé instance_id ç²å– card_id
	card_id = PlayerDataManager.get_card_id_from_instance(instance_id)

	if card_id.is_empty():
		print("âŒ ç„¡æ•ˆçš„å¯¦ä¾‹ID: " + instance_id)
		show_empty()
		return

	load_card_data()

func setup_with_card_id(p_card_id: String):
	"""ç›´æ¥ä½¿ç”¨ card_id è¨­å®šå¡ç‰‡è³‡æ–™ï¼ˆç”¨æ–¼é¸æ“‡å™¨ï¼Œä¸éœ€è¦å¯¦ä¾‹IDï¼‰"""
	card_id = p_card_id
	instance_id = ""  # æ²’æœ‰å¯¦ä¾‹ID
	is_empty = false

	if card_id.is_empty():
		show_empty()
		return

	load_card_data_from_template()

func load_card_data():
	"""è¼‰å…¥å¡ç‰‡è³‡æ–™"""
	# âœ… ç²å–å¡ç‰‡å¯¦ä¾‹ï¼ˆåŒ…å«ç­‰ç´šè³‡è¨Šï¼‰
	var card_instance = PlayerDataManager.get_card_instance(instance_id)
	if not card_instance:
		show_empty()
		return

	var card = card_instance  # card_instance å·²ç¶“æ˜¯ CardData å°è±¡

	# é¡¯ç¤ºå¡ç‰‡åç¨±
	if name_label:
		name_label.text = card.card_name

	# é¡¯ç¤ºç¨®æ—ï¼ˆå¦‚æœç¯€é»å­˜åœ¨ï¼‰
	if race_label:
		var race_name = RACE_NAMES.get(card.card_race, "æœªçŸ¥")
		race_label.text = "[%s]" % race_name

	# é¡¯ç¤ºå…ƒç´ 
	if element_label:
		var element_name = ELEMENT_NAMES.get(card.element, "??")
		var text_color = ELEMENT_COLORS.get(card.element, Color.WHITE)
		element_label.text = "[%s]" % element_name
		element_label.add_theme_color_override("font_color", text_color)

	# é¡¯ç¤ºå¡åœ–
	var texture = DataManager.get_card_texture(card_id)
	if texture:
		card_texture.texture = texture
		card_texture.visible = true
		card_sprite.color = Color(0, 0, 0, 0)
	else:
		card_texture.texture = null
		card_texture.visible = false
		var element_color = ELEMENT_COLORS.get(card.element, Color.GRAY)
		card_sprite.visible = true
		card_sprite.color = element_color

	# âœ… é¡¯ç¤ºç­‰ç´šï¼ˆåœ¨å¡åœ–ä¸‹æ–¹çš„é»‘åº•å¸ƒæ¢ï¼‰
	if level_label:
		level_label.text = "Lv. %d" % card.current_level

	# âœ… é¡¯ç¤ºç­‰ç´šé€²åº¦æ¢ï¼ˆç•¶å‰ç­‰ç´š/æ»¿ç­‰ç´šï¼‰
	if exp_bar:
		# è¨ˆç®—ç­‰ç´šç™¾åˆ†æ¯”ï¼ˆ35ç´š/100æ»¿ç´š = 35%ï¼‰
		var level_progress = (float(card.current_level) / card.max_level) * 100.0
		exp_bar.value = level_progress

	# é¡¯ç¤ºä¸»å‹•æŠ€èƒ½
	if card.active_skill_id and not card.active_skill_id.is_empty():
		var skill = SkillRegistry.get_skill_info(card.active_skill_id)
		if skill and not skill.is_empty():
			if active_skill_separator:
				active_skill_separator.visible = true
			if active_skill_name:
				active_skill_name.text = skill.skill_name
			if active_skill_cd:
				active_skill_cd.text = "CD:%d" % card.active_skill_cd
			if active_skill_desc:
				active_skill_desc.visible = true
				active_skill_desc.text = skill.skill_description
		else:
			if active_skill_separator:
				active_skill_separator.visible = false
			if active_skill_desc:
				active_skill_desc.visible = false
	else:
		if active_skill_separator:
			active_skill_separator.visible = false
		if active_skill_desc:
			active_skill_desc.visible = false

	# é¡¯ç¤ºéšŠé•·æŠ€èƒ½
	if card.leader_skill_ids and card.leader_skill_ids.size() > 0:
		if leader_skill_separator:
			leader_skill_separator.visible = true
		if leader_skill_desc:
			leader_skill_desc.visible = true

		# çµ„åˆæ‰€æœ‰éšŠé•·æŠ€èƒ½çš„æè¿°
		var leader_desc_text = ""
		for skill_id in card.leader_skill_ids:
			var skill = SkillRegistry.get_skill_info(skill_id)
			if skill and not skill.is_empty():
				if not leader_desc_text.is_empty():
					leader_desc_text += "\n"
				leader_desc_text += "â€¢ " + skill.skill_description

		if leader_skill_desc:
			leader_skill_desc.text = leader_desc_text
	else:
		if leader_skill_separator:
			leader_skill_separator.visible = false
		if leader_skill_desc:
			leader_skill_desc.visible = false

func load_card_data_from_template():
	"""å¾å¡ç‰‡æ¨¡æ¿è¼‰å…¥è³‡æ–™ï¼ˆç”¨æ–¼é¸æ“‡å™¨ï¼Œä¸éœ€è¦å¯¦ä¾‹ï¼‰"""
	# ç²å–å¡ç‰‡æ¨¡æ¿æ•¸æ“š
	var card = DataManager.get_card(card_id)
	if not card:
		show_empty()
		return

	# é¡¯ç¤ºå¡ç‰‡åç¨±
	if name_label:
		name_label.text = card.card_name

	# é¡¯ç¤ºç¨®æ—ï¼ˆå¦‚æœç¯€é»å­˜åœ¨ï¼‰
	if race_label:
		var race_name = RACE_NAMES.get(card.card_race, "æœªçŸ¥")
		race_label.text = "[%s]" % race_name

	# é¡¯ç¤ºå…ƒç´ 
	if element_label:
		var element_name = ELEMENT_NAMES.get(card.element, "??")
		var text_color = ELEMENT_COLORS.get(card.element, Color.WHITE)
		element_label.text = "[%s]" % element_name
		element_label.add_theme_color_override("font_color", text_color)

	# é¡¯ç¤ºå¡åœ–
	var texture = DataManager.get_card_texture(card_id)
	if texture:
		card_texture.texture = texture
		card_texture.visible = true
		card_sprite.color = Color(0, 0, 0, 0)
	else:
		card_texture.texture = null
		card_texture.visible = false
		var element_color = ELEMENT_COLORS.get(card.element, Color.GRAY)
		card_sprite.visible = true
		card_sprite.color = element_color

	# é¡¯ç¤ºç­‰ç´šï¼ˆæ¨¡æ¿å¡ç‰‡é¡¯ç¤º Lv.1ï¼‰
	if level_label:
		level_label.text = "Lv. 1"

	# é¡¯ç¤ºç­‰ç´šé€²åº¦æ¢ï¼ˆåˆå§‹ç‚º 1 ç´šï¼‰
	if exp_bar:
		var level_progress = (1.0 / card.max_level) * 100.0
		exp_bar.value = level_progress

	# é¡¯ç¤ºä¸»å‹•æŠ€èƒ½
	if card.active_skill_id and not card.active_skill_id.is_empty():
		var skill = SkillRegistry.get_skill_info(card.active_skill_id)
		if skill and not skill.is_empty():
			if active_skill_separator:
				active_skill_separator.visible = true
			if active_skill_name:
				active_skill_name.text = skill.skill_name
			if active_skill_cd:
				active_skill_cd.text = "CD:%d" % card.active_skill_cd
			if active_skill_desc:
				active_skill_desc.visible = true
				active_skill_desc.text = skill.skill_description
		else:
			if active_skill_separator:
				active_skill_separator.visible = false
			if active_skill_desc:
				active_skill_desc.visible = false
	else:
		if active_skill_separator:
			active_skill_separator.visible = false
		if active_skill_desc:
			active_skill_desc.visible = false

	# é¡¯ç¤ºéšŠé•·æŠ€èƒ½
	if card.leader_skill_ids and card.leader_skill_ids.size() > 0:
		if leader_skill_separator:
			leader_skill_separator.visible = true
		if leader_skill_desc:
			leader_skill_desc.visible = true

		# çµ„åˆæ‰€æœ‰éšŠé•·æŠ€èƒ½çš„æè¿°
		var leader_desc_text = ""
		for skill_id in card.leader_skill_ids:
			var skill = SkillRegistry.get_skill_info(skill_id)
			if skill and not skill.is_empty():
				if not leader_desc_text.is_empty():
					leader_desc_text += "\n"
				leader_desc_text += "â€¢ " + skill.skill_description

		if leader_skill_desc:
			leader_skill_desc.text = leader_desc_text
	else:
		if leader_skill_separator:
			leader_skill_separator.visible = false
		if leader_skill_desc:
			leader_skill_desc.visible = false

func show_empty():
	"""é¡¯ç¤ºç©ºæ ¼å­"""
	is_empty = true
	instance_id = ""
	card_id = ""

	if name_label:
		name_label.text = "ç©º"
	if race_label:
		race_label.text = ""
	if element_label:
		element_label.text = ""
	if level_label:
		level_label.text = ""
	if exp_bar:
		exp_bar.value = 0

	card_sprite.color = Color(0.1, 0.1, 0.1, 0.5)
	card_sprite.visible = true
	if card_texture:
		card_texture.visible = false

	# éš±è—æŠ€èƒ½ç›¸é—œUI
	if active_skill_separator:
		active_skill_separator.visible = false
	if active_skill_desc:
		active_skill_desc.visible = false
	if leader_skill_separator:
		leader_skill_separator.visible = false
	if leader_skill_desc:
		leader_skill_desc.visible = false

	# ä¿®æ”¹é‚Šæ¡†æ¨£å¼
	var style = get_theme_stylebox("panel").duplicate()
	style.border_color = Color(0.2, 0.2, 0.2, 1.0)
	add_theme_stylebox_override("panel", style)

# ==================== è¼¸å…¥è™•ç† ====================

func _gui_input(event: InputEvent):
	if event is InputEventMouseButton and event.pressed:
		if event.button_index == MOUSE_BUTTON_LEFT:
			if not is_empty:
				# âœ… å„ªå…ˆç™¼é€ instance_idï¼Œè‹¥ç‚ºç©ºå‰‡ç™¼é€ card_idï¼ˆç”¨æ–¼é¸æ“‡å™¨ï¼‰
				var id_to_send = instance_id if not instance_id.is_empty() else card_id
				slot_clicked.emit(id_to_send, global_position)
				# æ’­æ”¾é»æ“Šå‹•ç•«
				play_click_animation()
		elif event.button_index == MOUSE_BUTTON_RIGHT:
			if not is_empty:
				# âœ… å³éµé»æ“Š - å„ªå…ˆç™¼é€ instance_idï¼Œè‹¥ç‚ºç©ºå‰‡ç™¼é€ card_id
				var id_to_send = instance_id if not instance_id.is_empty() else card_id
				slot_right_clicked.emit(id_to_send, global_position)

func play_click_animation():
	"""æ’­æ”¾é»æ“Šå‹•ç•«"""
	# åœæ­¢ä¹‹å‰çš„å‹•ç•«
	if active_tween and active_tween.is_valid():
		active_tween.kill()

	active_tween = create_tween()
	active_tween.set_trans(Tween.TRANS_ELASTIC)
	active_tween.set_ease(Tween.EASE_OUT)

	# ç¸®æ”¾æ•ˆæœ
	active_tween.tween_property(self, "scale", Vector2(0.95, 0.95), 0.1)
	active_tween.tween_property(self, "scale", Vector2(1.0, 1.0), 0.2)

	# å‹•ç•«å®Œæˆå¾Œæ¸…ç†å¼•ç”¨
	active_tween.finished.connect(func(): active_tween = null)

# ==================== è¦–è¦ºæ•ˆæœ ====================

func set_selected(selected: bool):
	"""è¨­ç½®é¸ä¸­ç‹€æ…‹ï¼ˆæ‰¹é‡åˆªé™¤æ¨¡å¼ï¼‰"""
	print("ğŸŸ¢ InventorySlot.set_selected è¢«èª¿ç”¨")
	print("   å¡ç‰‡ID: %s" % card_id)
	print("   é¸ä¸­ç‹€æ…‹: %s" % str(selected))
	is_selected_for_deletion = selected
	update_modulate()

func update_modulate():
	"""æ›´æ–°èª¿è£½é¡è‰²"""
	# âœ… å„ªå…ˆç´šï¼šé¸ä¸­ > è‡¨æ™‚æ ¼å­ > æ­£å¸¸
	if is_selected_for_deletion:
		print("   âœ… æ‡‰ç”¨ç¶ è‰²èª¿è£½ (0.6, 1.0, 0.6)")
		modulate = Color(0.6, 1.0, 0.6)  # ç¶ è‰²
	elif is_overflow_slot:
		print("   æ‡‰ç”¨ç´…è‰²èª¿è£½ (1.0, 0.8, 0.8)")
		modulate = Color(1.0, 0.8, 0.8)  # ç´…è‰²
	else:
		print("   æ‡‰ç”¨æ­£å¸¸èª¿è£½ (1.0, 1.0, 1.0)")
		modulate = Color(1.0, 1.0, 1.0)  # æ­£å¸¸

func _on_mouse_entered():
	"""æ»‘é¼ æ‡¸åœ"""
	if not is_empty:
		# âœ… æ ¹æ“šç•¶å‰ç‹€æ…‹ç–ŠåŠ é«˜äº®æ•ˆæœ
		if is_selected_for_deletion:
			modulate = Color(0.72, 1.2, 0.72)  # ç¶ è‰²åŸºç¤ä¸Šçš„é«˜äº®
		elif is_overflow_slot:
			modulate = Color(1.2, 0.96, 0.96)  # ç´…è‰²åŸºç¤ä¸Šçš„é«˜äº®
		else:
			modulate = Color(1.2, 1.2, 1.2)  # æ­£å¸¸é«˜äº®

func _on_mouse_exited():
	"""æ»‘é¼ é›¢é–‹"""
	# âœ… æ¢å¾©ç•¶å‰ç‹€æ…‹çš„èª¿è£½
	update_modulate()
